--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.4.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "cloudinary": "^2.2.0",
+    "dotenv": "^16.4.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
